# Group-Balancer

./: .coderabbit.yaml  .gitattributes  .gitignore  CHANGELOG.md  GEMINI.md  GroupBalancer.spec  LICENSE  README.md  REFACTOR_PLAN.md  SOLVER_SUMMARY.md  app.py  build.py  group_balancer.py  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  streamlit_launcher.py
.github/workflows/: ci.yml
.kiro/specs/group-balancer/: design.md  requirements.md  tasks.md
docs/: README.md  SUMMARY.md  data-schema.md  developer-guide.md  solver-mechanics.md
group_balancer/: __init__.py  __main__.py  balance_engine.py  cli.py  excel_reader.py  excel_writer.py  group_optimizer.py  models.py  result_formatter.py
modules/: __init__.py  algorithms.py  config.py  data_loader.py  output_manager.py  parallel_engine.py  solver.py
src/: __init__.py
src/core/: __init__.py  config.py  data_loader.py  models.py  services.py  solver.py  solver_interface.py  tag_utils.py
src/ui/: __init__.py  components.py  results_renderer.py  session_manager.py  steps.py
src/utils/: __init__.py  exporter.py  group_helpers.py
tests/: __init__.py  conftest.py  test_cli.py  test_config.py  test_coverage_boost.py  test_coverage_bump.py  test_coverage_edge_cases.py  test_data_loader.py  test_determinism.py  test_edge_cases.py  test_excel_writer.py  test_exporter.py  test_group_helpers.py  test_group_optimizer.py  test_infra.py  test_models.py  test_models_unit.py  test_output_manager.py  test_result_formatter.py  test_scaling_tiers.py  test_services.py  test_solver.py  test_solver_interface.py  test_solver_unit.py  test_statistics.py  test_steps_edge.py  test_ui.py  test_utils.py
tools/: __init__.py  pre_ci.ps1  pre_ci.py  test_determinism.py  update_readme.py
